# scrobblepay

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: TASK.md
agents/: arc_ca.pem  scrobble-agent.ts  scrobble_agent.py
contracts/: Splitter.abi.json  Splitter.sol
docs/: NOTE.md  circle-usage.md  splitter-contract.md
public/: index.html
scripts/: deploy.sh  deploy_contract.py  send-nanopayment.ts  send_nanopayment.py
src/: lastfm.ts  server.ts  splitter.ts
