[project]
name = "scrobblepay"
version = "1.0.0"
description = "AI agent for user-centric nanopayments on Arc"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.0",
    "web3>=7.0",
]

[project.scripts]
scrobble-agent = "agents.scrobble_agent:run"

[tool.ruff]
line-length = 100
target-version = "py314"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
